force-app/main/default/objects/Opportunity/fields/OTM_Role__c.field-meta.xml
<CustomField>
    <fullName>OTM_Role__c</fullName>
    <description>Overlay Team Member role - placeholder values pending Elvira sign-off (G-2)</description>
    <label>OTM Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder A</fullName>
            </value>
            <value>
                <fullName>Placeholder B</fullName>
            </value>
            <value>
                <fullName>Placeholder C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>