force-app/main/default/objects/Opportunity/fields/Paper_Process_Steps__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process_Steps__c</fullName>
    <description>Multi-select checklist of legal/procurement/contractual steps required to close. Stored semi-colon separated.</description>
    <label>Paper Process - Steps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procurement Review</fullName>
            </value>
            <value>
                <fullName>Legal / MSA Negotiation</fullName>
            </value>
            <value>
                <fullName>Security Review</fullName>
            </value>
            <value>
                <fullName>Vendor Onboarding</fullName>
            </value>
            <value>
                <fullName>PO Creation</fullName>
            </value>
            <value>
                <fullName>DocuSign Routing</fullName>
            </value>
            <value>
                <fullName>Finance Approval</fullName>
            </value>
            <value>
                <fullName>IT Approval</fullName>
            </value>
            <value>
                <fullName>Fiscal Year Cutoff Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>