force-app/main/default/objects/Opportunity/fields/Power_Density__c.field-meta.xml
<CustomField>
    <fullName>Power_Density__c</fullName>
    <label>Power Density (W/sqm)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>