force-app/main/default/objects/Opportunity/fields/Power_kW__c.field-meta.xml
<CustomField>
    <fullName>Power_kW__c</fullName>
    <description>Required for all Platform/hyperscale opportunities. Passes to Quote for pricebook selection.</description>
    <inlineHelpText>Total committed power in kilowatts. Required for Platform and hyperscale deals. Used for pricebook selection on child quotes.</inlineHelpText>
    <label>Power Requirement (kW)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>