force-app/main/default/objects/Opportunity/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the accepted Quote that created the Order for this Opportunity. Set by F-15 on SOF upload. Used to sync Quote data to Opportunity and track which Quote became the Order.</description>
    <inlineHelpText>The accepted Quote that became the Order for this deal. Populated automatically when a signed SOF is uploaded. Do not edit manually.</inlineHelpText>
    <label>Primary Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Primary Quote Opportunities</relationshipLabel>
    <relationshipName>Primary_Quote_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>