force-app/main/default/objects/Opportunity/fields/Primary_Quote_RDD__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_RDD__c</fullName>
    <description>Requested Delivery Date from the Primary Quote. For BAR/pipeline reporting (RDD column).</description>
    <formula>Primary_Quote__r.RDD__c</formula>
    <inlineHelpText>Requested Delivery Date sourced from the Primary Quote.</inlineHelpText>
    <label>Primary Quote RDD</label>
    <type>Date</type>
</CustomField>