force-app/main/default/objects/Opportunity/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Required before Stage 2. Inherited from Lead on conversion.</description>
    <inlineHelpText>Select all Digital Edge products the customer is evaluating. Required before Stage 2. Carried over from the Lead automatically on conversion.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Hyperscale</fullName>
            </value>
            <value>
                <fullName>Interconnect</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>