force-app/main/default/objects/Opportunity/fields/PUE__c.field-meta.xml
<CustomField>
    <fullName>PUE__c</fullName>
    <description>Power Usage Effectiveness for metered power. Typically between 1.2 and 2.0.</description>
    <label>PUE (Metered Power)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>