force-app/main/default/objects/Opportunity/fields/Quota_Relief_Pct__c.field-meta.xml
<CustomField>
    <fullName>Quota_Relief_Pct__c</fullName>
    <label>Booking credit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>