force-app/main/default/objects/Opportunity/fields/Quote_MRC__c.field-meta.xml
<CustomField>
    <fullName>Quote_MRC__c</fullName>
    <label>Quote MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>