force-app/main/default/objects/Opportunity/fields/Quote_NRC__c.field-meta.xml
<CustomField>
    <fullName>Quote_NRC__c</fullName>
    <label>Quote NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>