force-app/main/default/objects/Opportunity/fields/Ramp_Phases__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phases__c</fullName>
    <description>Required when Is_Ramp_Deal__c = TRUE. Values: 2-6.</description>
    <inlineHelpText>How many capacity phases does this ramp deal have? Required when Is Ramp Deal is checked. Valid range is 2-6 phases.</inlineHelpText>
    <label>Number of Ramp Phases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>