force-app/main/default/objects/Opportunity/fields/Re_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE when customer previously churned and returned. Prevents counting as New Logo.</description>
    <inlineHelpText>Check if this customer previously churned and is returning. Prevents the deal from being classified as a New Logo for booking and reporting purposes.</inlineHelpText>
    <label>Re-Engagement Deal</label>
    <type>Checkbox</type>
</CustomField>