force-app/main/default/objects/Opportunity/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required when Sales_Motion__c = Referral. Account.Type must be Reseller or Referral Partner.</description>
    <inlineHelpText>Required when Sales Motion is Referral. Link to the partner account that referred this deal. Account type must be Reseller or Referral Partner.</inlineHelpText>
    <label>Referral Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Referral_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>