force-app/main/default/objects/Opportunity/fields/Remaining_Month__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Month__c</fullName>
    <label>Remaining Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>