force-app/main/default/objects/Opportunity/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <description>Classification of the renewal motion. Required when Deal_Type__c = Renewal. Drives renewal campaign logic and at-risk alerting.</description>
    <inlineHelpText>How is this renewal expected to proceed? Auto = standard auto-renewal, no active sales needed. Negotiated = terms are being renegotiated. At-Risk = customer has indicated churn risk.</inlineHelpText>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>At-Risk</fullName>
            </value>
            <value>
                <fullName>Early Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>