force-app/main/default/objects/Opportunity/fields/Reservation_ROFR_kW__c.field-meta.xml
<CustomField>
    <fullName>Reservation_ROFR_kW__c</fullName>
    <description>Reservation or Right of First Refusal capacity in kW.</description>
    <label>Reservation / ROFR (kW)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>