force-app/main/default/objects/Opportunity/fields/Resurrect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Resurrect_Reason__c</fullName>
    <description>Required when resurrecting a Lost opportunity. Captures why this opportunity has re-entered the pipeline. Set by the Resurrect Opportunity screen flow.</description>
    <inlineHelpText>Explain why this previously-lost opportunity is being re-opened. Include any new information, changed circumstances, or customer re-engagement details.</inlineHelpText>
    <label>Resurrect Reason</label>
    <type>TextArea</type>
</CustomField>