force-app/main/default/objects/Opportunity/fields/Resurrection_Date__c.field-meta.xml
<CustomField>
    <fullName>Resurrection_Date__c</fullName>
    <description>Auto-stamped date when a Lost opportunity is resurrected. Set by the Resurrect Opportunity screen flow.</description>
    <inlineHelpText>Date this opportunity was re-opened after being marked as Lost. Populated automatically by the Resurrect Opportunity action.</inlineHelpText>
    <label>Resurrection Date</label>
    <type>Date</type>
</CustomField>