force-app/main/default/objects/Opportunity/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <description>When Referral: Referral_Partner__c required. When Resale or via Indonet: Channel_Partner__c required.</description>
    <inlineHelpText>How this deal was originated. Referral requires a Referral Partner; Resale and via Indonet require a Channel Partner. Direct means no partner involvement.</inlineHelpText>
    <label>Sales Motion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>via Indonet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>