force-app/main/default/objects/Opportunity/fields/Salesperson_2__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Second rep on this deal. Used for split commission calculations. Populate SP2 Split % and SP2 Quota Relief % fields alongside this.</inlineHelpText>
    <label>Salesperson 2 (SP2)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SP2_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>