force-app/main/default/objects/Opportunity/fields/Salesperson_3__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Third rep on this deal. Used for three-way split commission calculations. Populate SP3 Split % and SP3 Quota Relief % fields alongside this.</inlineHelpText>
    <label>Salesperson 3 (SP3)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SP3_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>