force-app/main/default/objects/Opportunity/fields/SBI_Flag__c.field-meta.xml
<CustomField>
    <fullName>SBI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE when FX billing, non-standard payment terms, or split billing across multiple BANs.</description>
    <inlineHelpText>Check when this deal requires non-standard billing - FX billing, non-standard payment terms, or invoicing split across multiple BANs. Triggers finance review on the Quote.</inlineHelpText>
    <label>Special Billing Instruction</label>
    <type>Checkbox</type>
</CustomField>