force-app/main/default/objects/Opportunity/fields/SDD_Approved__c.field-meta.xml
<CustomField>
    <fullName>SDD_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE once Solution Design Document is finalised and approved.</description>
    <inlineHelpText>Check once the Solution Design Document has been reviewed and signed off. Required for complex deals with Solution Engagement. Updated by the TPM Owner.</inlineHelpText>
    <label>SDD Approved</label>
    <type>Checkbox</type>
</CustomField>