force-app/main/default/objects/Opportunity/fields/Skip_Stage_Gate__c.field-meta.xml
<CustomField>
    <fullName>Skip_Stage_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Migration-only helper. Set TRUE via Integration User during data load to bypass F-08 stage gate validation. FLS hidden from all profiles post-migration. Deactivate after migration.</description>
    <inlineHelpText>Used during data migration only to bypass stage gate validation. Do not check in normal use. Hidden from all non-integration profiles.</inlineHelpText>
    <label>Skip Stage Gate (Migration)</label>
    <type>Checkbox</type>
</CustomField>