force-app/main/default/objects/Opportunity/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <description>Order Number (DE) from the linked Original Order, surfaced as SO# for BAR/pipeline reporting.</description>
    <formula>Original_Order__r.Order_Number__c</formula>
    <inlineHelpText>DE Order Number from the linked Original Order.</inlineHelpText>
    <label>SO# (Order Number)</label>
    <type>Text</type>
</CustomField>