force-app/main/default/objects/Opportunity/fields/Solution_Engagement_Required__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engagement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE for complex deals. Triggers TPM assignment.</description>
    <inlineHelpText>Check for complex deals that require a Technical Project Manager to produce a Solution Design Document. Triggers TPM Owner assignment and SDD approval tracking.</inlineHelpText>
    <label>Solution Engagement Required</label>
    <type>Checkbox</type>
</CustomField>