force-app/main/default/objects/Opportunity/fields/SP1__c.field-meta.xml
<CustomField>
    <fullName>SP1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 1</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (SP1)</relationshipLabel>
    <relationshipName>Opportunities_SP1</relationshipName>
    <type>Lookup</type>
</CustomField>