force-app/main/default/objects/Opportunity/fields/SP1_QR_Pct__c.field-meta.xml
<CustomField>
    <fullName>SP1_QR_Pct__c</fullName>
    <inlineHelpText>Percentage of this deal&apos;s MRC that counts toward Salesperson 1&apos;s quota. Used by Finance for incentive compensation calculations.</inlineHelpText>
    <label>SP1 Booking credit %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>