force-app/main/default/objects/Opportunity/fields/SP1_Split__c.field-meta.xml
<CustomField>
    <fullName>SP1_Split__c</fullName>
    <label>SP1 Split</label>
    <length>255</length>
    <type>Text</type>
</CustomField>