force-app/main/default/objects/Opportunity/fields/SP2__c.field-meta.xml
<CustomField>
    <fullName>SP2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (SP2)</relationshipLabel>
    <relationshipName>Opportunities_SP2</relationshipName>
    <type>Lookup</type>
</CustomField>