force-app/main/default/objects/Opportunity/fields/SP2_QR_Pct__c.field-meta.xml
<CustomField>
    <fullName>SP2_QR_Pct__c</fullName>
    <inlineHelpText>Percentage of this deal&apos;s MRC that counts toward Salesperson 2&apos;s quota. Required when SP2 is populated.</inlineHelpText>
    <label>SP2 Booking credit %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>