force-app/main/default/objects/Opportunity/fields/SP2_Split__c.field-meta.xml
<CustomField>
    <fullName>SP2_Split__c</fullName>
    <label>SP2 Split</label>
    <length>255</length>
    <type>Text</type>
</CustomField>