force-app/main/default/objects/Opportunity/fields/SP2_Split_Pct__c.field-meta.xml
<CustomField>
    <fullName>SP2_Split_Pct__c</fullName>
    <inlineHelpText>SP2&apos;s share of commission for this deal. Required when Salesperson 2 is populated.</inlineHelpText>
    <label>SP2 Split %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>