force-app/main/default/objects/Opportunity/fields/SP3__c.field-meta.xml
<CustomField>
    <fullName>SP3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 3</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (SP3)</relationshipLabel>
    <relationshipName>Opportunities_SP3</relationshipName>
    <type>Lookup</type>
</CustomField>