force-app/main/default/objects/Opportunity/fields/SP3_QR_Pct__c.field-meta.xml
<CustomField>
    <fullName>SP3_QR_Pct__c</fullName>
    <inlineHelpText>Percentage of this deal&apos;s MRC that counts toward Salesperson 3&apos;s quota. Required when SP3 is populated.</inlineHelpText>
    <label>SP3 Booking credit %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>