force-app/main/default/objects/Opportunity/fields/SP3_Split__c.field-meta.xml
<CustomField>
    <fullName>SP3_Split__c</fullName>
    <label>SP3 Split</label>
    <length>255</length>
    <type>Text</type>
</CustomField>