force-app/main/default/objects/Opportunity/fields/SP3_Split_Pct__c.field-meta.xml
<CustomField>
    <fullName>SP3_Split_Pct__c</fullName>
    <inlineHelpText>SP3&apos;s share of commission for this deal. Required when Salesperson 3 is populated.</inlineHelpText>
    <label>SP3 Split %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>