force-app/main/default/objects/Opportunity/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>22FX</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Approved-Churn</fullName>
            </value>
            <value>
                <fullName>Backlog-JP</fullName>
            </value>
            <value>
                <fullName>Comm Amortization</fullName>
            </value>
            <value>
                <fullName>Contracted 2023</fullName>
            </value>
            <value>
                <fullName>DR 2022</fullName>
            </value>
            <value>
                <fullName>DR 2023</fullName>
            </value>
            <value>
                <fullName>DR 2024</fullName>
            </value>
            <value>
                <fullName>DR 2025</fullName>
            </value>
            <value>
                <fullName>DR 2026</fullName>
            </value>
            <value>
                <fullName>EPIX Promo JKT2 2025</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Interconnect</fullName>
            </value>
            <value>
                <fullName>Internal Orders</fullName>
            </value>
            <value>
                <fullName>MNL Promotion 2025</fullName>
            </value>
            <value>
                <fullName>Non Bookable</fullName>
            </value>
            <value>
                <fullName>Novated-Arteria</fullName>
            </value>
            <value>
                <fullName>Novated-CTC</fullName>
            </value>
            <value>
                <fullName>Novated-EDGE</fullName>
            </value>
            <value>
                <fullName>Novated-Japan</fullName>
            </value>
            <value>
                <fullName>Novated-Sejong</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>NRC Amortization</fullName>
            </value>
            <value>
                <fullName>NSP SPIFF 2024</fullName>
            </value>
            <value>
                <fullName>Potential NSP SPIFF 2024</fullName>
            </value>
            <value>
                <fullName>Prelease 2024</fullName>
            </value>
            <value>
                <fullName>Prelease 2025</fullName>
            </value>
            <value>
                <fullName>Prelease 2026</fullName>
            </value>
            <value>
                <fullName>To Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>