force-app/main/default/objects/Opportunity/fields/Target_Country__c.field-meta.xml
<CustomField>
    <fullName>Target_Country__c</fullName>
    <description>The single APAC country this opportunity is targeting. Set at lead conversion from the lead&apos;s Target_Country__c (one opportunity created per country). Drives site selection during Qualify.</description>
    <inlineHelpText>The country where the prospect wants DE services for this deal. One opportunity per country; this field holds the single value for this opportunity.</inlineHelpText>
    <label>Target Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>TH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>