force-app/main/default/objects/Opportunity/fields/Target_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Target_Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Hall</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>Choose a Data Hall that belongs to the selected Operation Site and Floor.</errorMessage>
        <filterItems>
            <field>DataHall__c.Site__c</field>
            <operation>equals</operation>
            <valueField>$Source.Target_Site__c</valueField>
        </filterItems>
        <filterItems>
            <field>DataHall__c.Floor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Target_Floor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DataHall__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Data_Hall</relationshipName>
    <type>Lookup</type>
</CustomField>