force-app/main/default/objects/Opportunity/fields/Target_Floor__c.field-meta.xml
<CustomField>
    <fullName>Target_Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Choose a Floor that belongs to the selected Operation Site.</errorMessage>
        <filterItems>
            <field>Floor__c.Site__c</field>
            <operation>equals</operation>
            <valueField>$Source.Target_Site__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Floor</relationshipName>
    <type>Lookup</type>
</CustomField>