force-app/main/default/objects/Opportunity/fields/TCV_MRC_USD__c.field-meta.xml
<CustomField>
    <fullName>TCV_MRC_USD__c</fullName>
    <formula>IF(
OR(ISBLANK(FX_Rate__c), FX_Rate__c = 0),
NULL,
Total_Deal_MRC__c / FX_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV MRC (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>