force-app/main/default/objects/Opportunity/fields/Total_Deal_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_MRC__c</fullName>
    <description>Populated by automation for ramp deal Parent Opportunities. Sum of all child Opportunity MRC__c. Display only.</description>
    <inlineHelpText>Auto-calculated sum of MRC across all ramp phases for parent ramp deal Opportunities. Read-only - do not edit manually.</inlineHelpText>
    <label>TCV MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>