force-app/main/default/objects/Opportunity/fields/TPM_Owner__c.field-meta.xml
<CustomField>
    <fullName>TPM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required when Solution_Engagement_Required__c = TRUE.</description>
    <inlineHelpText>The Technical Project Manager assigned to this deal. Required when Solution Engagement Required is checked. Responsible for producing and approving the Solution Design Document.</inlineHelpText>
    <label>TPM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TPM_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>