force-app/main/default/objects/Opportunity/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Brand grouping name inherited from the parent Account. Provides quick brand context for pipeline reporting across entities.</description>
    <formula>Account.Unique_Name__c</formula>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>