force-app/main/default/objects/Opportunity/fields/Was_Previously_Lost__c.field-meta.xml
<CustomField>
    <fullName>Was_Previously_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when a Lost opportunity is resurrected. Used for reporting on resurrected pipeline and win rate analysis.</description>
    <inlineHelpText>Checked when this opportunity was previously lost and then resurrected. Populated automatically by the Resurrect Opportunity action.</inlineHelpText>
    <label>Was Previously Lost</label>
    <type>Checkbox</type>
</CustomField>