force-app/main/default/objects/Opportunity/fields/Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason__c</fullName>
    <description>Primary reason this deal was won. Required on Close Won for win/loss parity with Loss_Reason__c. Captured via post-win debrief screen.</description>
    <inlineHelpText>Why did we win this deal? Be specific - this data feeds win/loss analysis and battle card updates.</inlineHelpText>
    <label>Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Technical Fit</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Location / Site</fullName>
            </value>
            <value>
                <fullName>Speed &amp; Delivery</fullName>
            </value>
            <value>
                <fullName>Strategic Account Program</fullName>
            </value>
            <value>
                <fullName>Existing Customer Expansion</fullName>
            </value>
            <value>
                <fullName>Partner / Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>