force-app/main/default/objects/Opportunity/validationRules/DE_Opp_Referral_Partner_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Opp_Referral_Partner_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Sales_Motion__c,&apos;Referral&apos;),ISBLANK(Referral_Partner__c))</errorConditionFormula>
    <errorMessage>Referral Partner is required when Sales Motion = Referral.</errorMessage>
</ValidationRule>