force-app/main/default/objects/Opportunity/validationRules/DE_Opp_Stage1_Gate.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Opp_Stage1_Gate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(Skip_Stage_Gate__c),ISPICKVAL(StageName,&apos;1-Suspect&apos;),ISCHANGED(StageName),OR(ISBLANK(AccountId),ISBLANK(TEXT(Sales_Motion__c)),ISBLANK(GoLive_Target_Date__c),ISBLANK(TEXT(Customer_Type__c))),NOT(AND($Permission.Bypass_Opp_Stage_Gate,CASE(TEXT(PRIORVALUE(StageName)),&apos;2-Prospect&apos;,2,&apos;3-Quote&apos;,3,&apos;4-Negotiate&apos;,4,&apos;5-Won&apos;,5,&apos;9-Lost&apos;,9,0)&gt;1)))</errorConditionFormula>
    <errorMessage>Stage 1-Suspect requires Account, Sales Motion, GoLive Date, and Account Type.</errorMessage>
</ValidationRule>